css/intro.css
body {}

#intro-part {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    display: none;
}

.intro1 {
    position: fixed;
    top: 0;
    bottom: 0;
    left: 0;
    right: 50%;
    background: rgba(52, 152, 219, 1.0);
}

.intro2 {
    position: fixed;
    top: 0;
    bottom: 0;
    left: 50%;
    right: 0;
    background: #7f8c8d;
}

.minimize-nav a {
    text-decoration: none;
}

.minimize-nav a:visited {
    color: white;
}

nav .minimize-nav {
    position: absolute;
    z-index: 10;
    top: 0;
    right: 3%;
    font-size: 400%;
    font-weight: bold;
    color: white;
    cursor: pointer;

}

nav .minimze-nav:hover {
    color: #8e44ad;
}

#signature {
    display: inline-block;
    position: fixed;
    top: 24%;
    font-size: 400%;
    color: black;
    padding-left: 5%;
}

.signature1 {
    font-family: 'Pacifico', cursive;
}

.signature2 {
    font-family: 'Teko', sans-serif;
    font-size: 500%;
    font-weight: bold;
}

.divider {
    position: absolute;
    z-index: 2;
    top: 10%;
    left: 0%;
    right: 0%;
    bottom: 10%;
    border-right: 5px inset #ecf0f1;
}

.dropdown {
    position: absolute;
    z-index: 2;
    display: inline-block;
    left: 47.87%;
    top: 90%;
    font-size: 400%;
    color: #ecf0f1;
    transition: all 0.5s ease-out;
}

.dropdown:hover {
    color: #8e44ad;
}

#intro-part a:visited {
    color: #f1c40f;
}

#intro-part a:active {
    color: #8e44ad;
}

.contents {
    position: absolute;
    z-index: 10;
    top: 24%;
    font-size: 300%;
    margin-left: 25%;
    font-family: 'Teko', sans-serif;
    font-weight: bold;
}

.contents a {
    color: #f1c40f;
    transition: all 0.5s ease-out;
}

#intro-part .intro2 .contents a:hover {
    color: #8e44ad;
}

.container {
    position: fixed;
    top: 75%;
    bottom: 0%;
    right: 0%;
    left: 50%;
}

.glitch-img {
    position: absolute;
    width: 100%;
    height: 100%;
    background-position: center;
    -moz-background-size: cover;
    -o-background-size: cover;
    -webkit-background-size: cover;
    background-size: cover;
    opacity: 1
}

.mypic {
    position: fixed;
    float: right;
    bottom: 0;
    right: 0;
    display: flex;
}

.mypic img {
    z-index: -1;
    position: fixed;
    right: 0;
    bottom: 0;
    max-width: 25.5%;
    max-height: 25%;
}

.shade {
    z-index: 2;
    position: fixed;
    top: 24%;
    right: 50%;
    bottom: 25%;
    width: 50%;
    height: 50%;
    background: rgba(44, 62, 80, 0.71);

}

